...
        android:layout_height="wrap_content"
        android:text="@string/wallet_name"
        android:layout_marginTop="10dp"
        android:layout_gravity="start"
        style="@style/App.Input.Text.Small"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wallet_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/App.Input.Layout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/wallet_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            style="@style/App.Input.Layout"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
...
        android:layout_height="wrap_content"
        android:text="@string/initial_balance"
        android:layout_marginTop="10dp"
        android:layout_gravity="start"
        style="@style/App.Input.Text.Small"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expandedHintEnabled="false"
        app:prefixText="$"
        app:suffixText="AU"
        style="@style/App.Input.Layout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:inputType="number"
            style="@style/App.Input.Layout"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/add_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add"
        android:textSize="16sp"
        android:textColor="@color/white"
...
