...
        android:id="@+id/popup_background"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/popup_background" />

    <LinearLayout
        android:id="@+id/wallet_options_window"
        android:layout_centerInParent="true"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@color/lighter_black"
        android:padding="10dp"
        android:orientation="vertical">
...
                android:id="@+id/close_wallet_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cancel_icon"/>
        </LinearLayout>
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/wallet_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            app:checkedButton="@id/change_wallet"
...
                android:text="@string/change"
                android:layout_marginEnd="2dp"
                android:backgroundTint="@color/button_checkable"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall"
                style="@style/App.Button.Entry"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/transfer_wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transfer"
                android:backgroundTint="@color/button_checkable"
                android:layout_marginEnd="2dp"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall"
...
                android:backgroundTint="@color/button_checkable"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall"
                style="@style/App.Button.Entry"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <LinearLayout
            android:id="@+id/entry_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </LinearLayout>
</RelativeLayout>
