<resources>
    <string name="app_name">Walletify</string>
    <string name="cashflow">monthly cashflow</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="transactions">Transactions</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="sort_by">Sort by</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="home">Home</string>
    <string name="analysis">Analysis</string>
    <string name="budgets">Budgets</string>
    <string name="profile">Profile</string>
    <string name="amount">Amount</string>
    <string name="change">Change</string>
    <string name="wallet">Wallet</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="signout">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="signout_confirmation">Are you sure you want to sign out?</string>
    <string name="delete_account_confirmation">Are you sure you want to delete your account?</string>
    <string name="cancel">Cancel</string>
    <string name="note">Note</string>
    <string name="initial_balance">Initial balance</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add Income</string>
    <string name="to">To</string>
    <string name="add_budget">Add Budget</string>
    <string name="transfer">Transfer</string>
    <string name="add">Add</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="currency">Currency</string>
    <string name="balance">Balance</string>
    <string name="scan_receipt">Scan Receipt</string>
    <string name="retake">Retake</string>
    <string name="scan">Scan</string>
    <string name="expense_chart">Expense Chart</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_changes">Save Changes</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="new_entry">New Entry</string>
    <string name="sign_up">Sign Up</string>
    <string name="from">From</string>
    <string name="redirect_to_signup">Don\'t have an account? <u>Sign up</u></string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password_hint">Enter your password</string>
    <string name="phone_number_hint">(+61) 401 – 234567</string>
    <string name="full_name_hint">Enter your full name</string>
    <string name="confirm_password_hint">Re-enter your password</string>
    <string name="groceries">Groceries</string>
    <string name="internet">Internet</string>
    <string name="shopping">Shopping</string>
    <string name="utilities">Utilities</string>
    <string name="edit"><u>Edit</u></string>
    <string name="food">Food</string>
    <string name="transportation">Transportation</string>
    <string name="education">Education</string>
    <string name="wallet_menu">Wallet Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>